--- a/fixme.dtx
+++ b/fixme.dtx
@@ -470,7 +470,7 @@
 % \subsection{Utilities}
 % \begin{macro}{\@fxpkgwarning}
 %   \begin{macro}{\@fxpkgerror}
-%     Issue \fixme{} package warnings or errors:
+%     \fixme{} package warnings or errors:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -549,8 +549,8 @@
 %
 % \subsubsection{Backward compatibility related}
 % \begin{macro}{\@fxnewlegacycmd}
-%   Defines a ``legacy'' command, taking one argument, and that has no effect
-%   anymore.
+%   A ``legacy command'' is an old macro taking one argument and that has no
+%   effect anymore.
 % \end{macro}
 %    \begin{macrocode}
 \newcommand\@fxnewlegacycmd[1]{%
@@ -561,14 +561,23 @@
 
 %    \end{macrocode}
 % \begin{macro}{\@fxdeprecatedcmdwarning}
-%   Issue a warning about a deprecated command, suggesting to use the new one
-%   instead.
+%   \begin{macro}{\@fxnewdeprecatedcmd}
+%     A ``deprecated command'' is a user-level macro that has been deprecated
+%     in favor of a new one. Users might call these commands, but are not
+%     supposed to redefine them. Hence, their definition is just a call to the
+%     new version.
+%   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
 \newcommand\@fxdeprecatedcmdwarning[2]{%
   \@fxpkgwarning{%
     \expandafter\string\csname #1\endcsname\space is deprecated;
     please use \expandafter\string \csname #2\endcsname\space instead,}}
+\newcommand\@fxnewdeprecatedcmd[2]{%
+  \expandafter\edef\csname #1\endcsname{%
+    \noexpand\@fxdeprecatedcmdwarning{#1}{#2}%
+    \csname #2\endcsname}}
+
 
 %    \end{macrocode}
 % \begin{macro}{\@fxdeprecatedenvwarning}
@@ -879,34 +888,30 @@
 %
 % \subsection{\fixme{} notes}
 % \subsubsection{Note counters}
-% |fixmecount| maintains the total of all notes, regardless of their level.
-% \DescribeMacro{\thefixmecount}
-% \DescribeMacro{\thefxnotecount}
-% \DescribeMacro{\thefxwarningcount}
-% \DescribeMacro{\thefxerrorcount}
-% \DescribeMacro{\thefxfatalcount}
+% \begin{macro}{\thefixmecount}
+%   \begin{macro}{\thefxnotecount}
+%     \begin{macro}{\thefxwarningcount}
+%       \begin{macro}{\thefxerrorcount}
+%         \begin{macro}{\thefxfatalcount}
+%           |fixmecount| maintains the total of all notes, regardless of their
+%           level. As of version 4, other |fixme*| counters have been renamed
+%           to |fx*|.
+%         \end{macro}
+%       \end{macro}
+%     \end{macro}
+%   \end{macro}
+% \end{macro}
 %    \begin{macrocode}
 \newcounter{fixmecount}
-
 \newcounter{fxnotecount}
-\def\thefixmenotecount{%
-  \@fxdeprecatedcmdwarning{thefixmenotecount}{thefxnotecount}%
-  \thefxnotecount}
-
 \newcounter{fxwarningcount}
-\def\thefixmewarningcount{%
-  \@fxdeprecatedcmdwarning{thefixmewarningcount}{thefxwarningcount}%
-  \thefxwarningcount}
-
 \newcounter{fxerrorcount}
-\def\thefixmeerrorcount{%
-  \@fxdeprecatedcmdwarning{thefixmeerrorcount}{thefxerrorcount}%
-  \thefxerrorcount}
-
 \newcounter{fxfatalcount}
-\def\thefixmefatalcount{%
-  \@fxdeprecatedcmdwarning{thefixmefatalcount}{thefxfatalcount}%
-  \thefxfatalcount}
+
+\@fxnewdeprecatedcmd{thefixmenotecount}{thefxnotecount}
+\@fxnewdeprecatedcmd{thefixmewarningcount}{thefxwarningcount}
+\@fxnewdeprecatedcmd{thefixmeerrorcount}{thefxerrorcount}
+\@fxnewdeprecatedcmd{thefixmefatalcount}{thefxfatalcount}
 
 %    \end{macrocode}
 % \subsubsection{Inner fallback}
