--- a/fixme.dtx
+++ b/fixme.dtx
@@ -812,8 +812,9 @@
 %    \end{macrocode}
 % \begin{macro}{\FiXmeInfo}
 %   \begin{macro}{\FiXmeWarning}
-%     The following macros are unused since version 2.2, but kept here anyway
-%     to avoid breaking compilation of older documents.
+%     The following macros are unused since version 2.2 (at the time of which,
+%     layout and logging were the same thing), but kept here anyway to avoid
+%     breaking compilation of older documents.
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
