--- a/TODO
+++ b/TODO
@@ -95,3 +95,8 @@ expansion problems when trying to do so.
 * See if we can stick footnotes from environments to text before
 
 * Ask for the translation of "fatal errors" in the supported languages
+
+* Maybe the log messages should be internationalized as well ?
+	-> yes for logging
+	-> no for package messages
+
