--- a/fixme.dtx
+++ b/fixme.dtx
@@ -598,7 +598,6 @@
     \csname end#2\endcsname}}
 
 %    \end{macrocode}
-%
 % \subsection{List macros}
 % \begin{macro}{\l@fixme}
 %   \begin{macro}{\listoffixmes}
@@ -652,7 +651,7 @@
 % \subsubsection{Standard classes}
 % \begin{macro}{\listoffixmes@pretoc@article}
 %   \begin{macro}{\listoffixmes@posttoc@article}
-%     |article| version:
+%     \textbf{|article| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -665,7 +664,7 @@
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@report}
 %   \begin{macro}{\listoffixmes@posttoc@report}
-%     |report| version:
+%     \textbf{|report| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -683,7 +682,7 @@
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@book}
 %   \begin{macro}{\listoffixmes@posttoc@book}
-%     |book| version:
+%     \textbf{|book| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -713,7 +712,7 @@
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@scrartcl}
 %   \begin{macro}{\listoffixmes@posttoc@scrartcl}
-%     |scrartcl| version:
+%     \textbf{|scrartcl| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -729,7 +728,7 @@
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@scrreprt}
 %   \begin{macro}{\listoffixmes@posttoc@scrreprt}
-%     |scrreprt| version:
+%     \textbf{|scrreprt| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -751,7 +750,7 @@
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@scrbook}
 %   \begin{macro}{\listoffixmes@posttoc@scrbook}
-%     |scrbook| version:
+%     \textbf{|scrbook| version:}
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
