--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1129,7 +1129,8 @@
 %       \begin{macro}{\fxwarning}
 %         \begin{macro}{\fxerror}
 %           \begin{macro}{\fxfatal}
-%             As of version 4, \cs{fxfatal} supersedes \cs{fixme}.
+%             As of version 4, \cs{fxfatal} supersedes \cs{fixme}. \cs{fixme}
+%             remains for backward compatibility.
 %           \end{macro}
 %         \end{macro}
 %       \end{macro}
